// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-UUID-field-name-"
    style={Object {}}
  >
     
  </label>
  <input
    className="form-control"
    disabled={true}
    id="view-type-Form-field_type-UUID-field-name-"
    onChange={[Function]}
    type="text"
    value="Test"
  />
</div>
`;

exports[`getField for List 1`] = `
<div>
  <span>
    Test
  </span>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-UUID-field-name-"
  >
     
  </label>
  <div>
    <span>
      Test
    </span>
  </div>
</div>
`;
